# auth_service

./: Makefile  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/src/: application.py  gunicorn_runner.py  main.py  settings.py
backend/src/api/: router.py
backend/src/api/monitoring/: urls.py  views.py
deploy/: docker-compose.yml
src/: application.py  gunicorn_runner.py  main.py  settings.py
src/api/: router.py
src/api/accounts/: schemas.py  services.py  urls.py  utils.py  views.py
src/api/monitoring/: views.py
src/db/: config.py
src/db/migrations/: 000002_alter_user_table.down.sql  000002_alter_user_table.up.sql
src/db/models/: user.py
src/htmls/: verification_email.html
src/utils/: helpers.py  schema.py
